Remove unused dependencies in core, and unlinked VTableTest from chapters